[package]
name = "hassh"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"
description = "A SSH fingerprinting library written in Rust"
documentation = "https://docs.rs/hassh"
readme = "README.md"
repository = "https://github.com/flier/hassh-rs"
license = "BSD-3-Clause"
keywords = ["ssh", "fingerprinting", "security"]
categories = ["network-programming"]

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["pcap-file", "live-capture"]
capi = ["libc"]
pcap-file = ["pcap-parser"]
live-capture = ["pcap"]

# Flag for docs.rs builds where libpcap is not present.
docs-rs = ["pcap/docs-rs"]

[dependencies]
log = "0.4"
thiserror = "1.0"
md5 = "0.7"
pnet_packet = "0.27"
nom = "6.0"
ssh-parser = "0.4"

libc = { version = "0.2", optional = true }
pcap-parser = { version = "0.9", optional = true }
pcap = { version = "0.8", optional = true }

[dev-dependencies]
anyhow = "1.0"
pretty_env_logger = "0.4"
structopt = "0.3"
glob = "0.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime = "2.0"

[build-dependencies]
anyhow = "1.0"
cbindgen = "0.16"

[[example]]
name = "hassh"
required-features = ["pcap-file", "live-capture"]

[package.metadata.docs.rs]
features = ["capi", "docs-rs"]
